--- a/web/viewer.css
+++ b/web/viewer.css
@@ -594,6 +594,7 @@ body {
 
 #editorStampAddImage::before {
   mask-image: var(--editorParams-stampAddImage-icon);
+  -webkit-mask-image: var(--editorParams-stampAddImage-icon);
 }
 
 .doorHanger,
@@ -806,6 +807,7 @@ body {
   inset-inline-end: 6px;
   pointer-events: none;
   mask-image: var(--toolbarButton-menuArrow-icon);
+  -webkit-mask-image: var(--toolbarButton-menuArrow-icon);
 }
 
 .dropdownToolbarButton > select {
@@ -872,67 +874,82 @@ body {
 
 #sidebarToggle::before {
   mask-image: var(--toolbarButton-sidebarToggle-icon);
+  -webkit-mask-image: var(--toolbarButton-sidebarToggle-icon);
   transform: scaleX(var(--dir-factor));
 }
 
 #secondaryToolbarToggle::before {
   mask-image: var(--toolbarButton-secondaryToolbarToggle-icon);
+  -webkit-mask-image: var(--toolbarButton-secondaryToolbarToggle-icon);
   transform: scaleX(var(--dir-factor));
 }
 
 #findPrevious::before {
   mask-image: var(--findbarButton-previous-icon);
+  -webkit-mask-image: var(--findbarButton-previous-icon);
 }
 
 #findNext::before {
   mask-image: var(--findbarButton-next-icon);
+  -webkit-mask-image: var(--findbarButton-next-icon);
 }
 
 #previous::before {
   mask-image: var(--toolbarButton-pageUp-icon);
+  -webkit-mask-image: var(--toolbarButton-pageUp-icon);
 }
 
 #next::before {
   mask-image: var(--toolbarButton-pageDown-icon);
+  -webkit-mask-image: var(--toolbarButton-pageDown-icon);
 }
 
 #zoomOut::before {
   mask-image: var(--toolbarButton-zoomOut-icon);
+  -webkit-mask-image: var(--toolbarButton-zoomOut-icon);
 }
 
 #zoomIn::before {
   mask-image: var(--toolbarButton-zoomIn-icon);
+  -webkit-mask-image: var(--toolbarButton-zoomIn-icon);
 }
 
 #presentationMode::before {
   mask-image: var(--toolbarButton-presentationMode-icon);
+  -webkit-mask-image: var(--toolbarButton-presentationMode-icon);
 }
 
 #editorFreeText::before {
   mask-image: var(--toolbarButton-editorFreeText-icon);
+  -webkit-mask-image: var(--toolbarButton-editorFreeText-icon);
 }
 
 #editorInk::before {
   mask-image: var(--toolbarButton-editorInk-icon);
+  -webkit-mask-image: var(--toolbarButton-editorInk-icon);
 }
 
 #editorStamp::before {
   mask-image: var(--toolbarButton-editorStamp-icon);
+  -webkit-mask-image: var(--toolbarButton-editorStamp-icon);
 }
 
 #print::before,
 #secondaryPrint::before {
   mask-image: var(--toolbarButton-print-icon);
+  -webkit-mask-image: var(--toolbarButton-print-icon);
 }
 
 /*#if GENERIC*/
 :is(#openFile, #secondaryOpenFile)::before {
   mask-image: var(--toolbarButton-openFile-icon);
+  -webkit-mask-image: var(--toolbarButton-openFile-icon);
 }
 /*#endif*/
 
 :is(#download, #secondaryDownload)::before {
   mask-image: var(--toolbarButton-download-icon);
+  -webkit-mask-image: var(--toolbarButton-download-icon);
 }
 
 a.secondaryToolbarButton {
@@ -946,32 +963,39 @@ a:is(.toolbarButton, .secondaryToolbarButton)[href="#"] {
 
 #viewBookmark::before {
   mask-image: var(--toolbarButton-bookmark-icon);
+  -webkit-mask-image: var(--toolbarButton-bookmark-icon);
 }
 
 #viewThumbnail::before {
   mask-image: var(--toolbarButton-viewThumbnail-icon);
+  -webkit-mask-image: var(--toolbarButton-viewThumbnail-icon);
 }
 
 #viewOutline::before {
   mask-image: var(--toolbarButton-viewOutline-icon);
+  -webkit-mask-image: var(--toolbarButton-viewOutline-icon);
   transform: scaleX(var(--dir-factor));
 }
 
 #viewAttachments::before {
   mask-image: var(--toolbarButton-viewAttachments-icon);
+  -webkit-mask-image: var(--toolbarButton-viewAttachments-icon);
 }
 
 #viewLayers::before {
   mask-image: var(--toolbarButton-viewLayers-icon);
+  -webkit-mask-image: var(--toolbarButton-viewLayers-icon);
 }
 
 #currentOutlineItem::before {
   mask-image: var(--toolbarButton-currentOutlineItem-icon);
+  -webkit-mask-image: var(--toolbarButton-currentOutlineItem-icon);
   transform: scaleX(var(--dir-factor));
 }
 
 #viewFind::before {
   mask-image: var(--toolbarButton-search-icon);
+  -webkit-mask-image: var(--toolbarButton-search-icon);
 }
 
 .pdfSidebarNotification::after {
@@ -1008,58 +1032,72 @@ a:is(.toolbarButton, .secondaryToolbarButton)[href="#"] {
 
 #firstPage::before {
   mask-image: var(--secondaryToolbarButton-firstPage-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-firstPage-icon);
 }
 
 #lastPage::before {
   mask-image: var(--secondaryToolbarButton-lastPage-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-lastPage-icon);
 }
 
 #pageRotateCcw::before {
   mask-image: var(--secondaryToolbarButton-rotateCcw-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-rotateCcw-icon);
 }
 
 #pageRotateCw::before {
   mask-image: var(--secondaryToolbarButton-rotateCw-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-rotateCw-icon);
 }
 
 #cursorSelectTool::before {
   mask-image: var(--secondaryToolbarButton-selectTool-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-selectTool-icon);
 }
 
 #cursorHandTool::before {
   mask-image: var(--secondaryToolbarButton-handTool-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-handTool-icon);
 }
 
 #scrollPage::before {
   mask-image: var(--secondaryToolbarButton-scrollPage-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-scrollPage-icon);
 }
 
 #scrollVertical::before {
   mask-image: var(--secondaryToolbarButton-scrollVertical-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-scrollVertical-icon);
 }
 
 #scrollHorizontal::before {
   mask-image: var(--secondaryToolbarButton-scrollHorizontal-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-scrollHorizontal-icon);
 }
 
 #scrollWrapped::before {
   mask-image: var(--secondaryToolbarButton-scrollWrapped-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-scrollWrapped-icon);
 }
 
 #spreadNone::before {
   mask-image: var(--secondaryToolbarButton-spreadNone-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-spreadNone-icon);
 }
 
 #spreadOdd::before {
   mask-image: var(--secondaryToolbarButton-spreadOdd-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-spreadOdd-icon);
 }
 
 #spreadEven::before {
   mask-image: var(--secondaryToolbarButton-spreadEven-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-spreadEven-icon);
 }
 
 #documentProperties::before {
   mask-image: var(--secondaryToolbarButton-documentProperties-icon);
+  -webkit-mask-image: var(--secondaryToolbarButton-documentProperties-icon);
 }
 
 .verticalToolbarSeparator {
@@ -1253,9 +1291,11 @@ a:focus > .thumbnail > .thumbnailImage,
 .treeItemToggler::before {
   inset-inline-end: 4px;
   mask-image: var(--treeitem-expanded-icon);
+  -webkit-mask-image: var(--treeitem-expanded-icon);
 }
 .treeItemToggler.treeItemsHidden::before {
   mask-image: var(--treeitem-collapsed-icon);
+  -webkit-mask-image: var(--treeitem-collapsed-icon);
   transform: scaleX(var(--dir-factor));
 }
 .treeItemToggler.treeItemsHidden ~ .treeItems {
